--- a/latex/content/cahier-des-charges.tex
+++ b/latex/content/cahier-des-charges.tex
@@ -14,7 +14,7 @@ De par l'utilisation quasi exclusive du vote majoritaire dans l'ensemble des vot
 \section{Cahier des charges}
 \subsection{Objectif principal}\label{ssec:cdc:cdc:objprinc}
 \begin{enumerate}
-  \item Étude des méthodes de vote alternatif, quelS sont leurs avantages et leurs inconvénients.
+  \item Étude des méthodes de vote alternatif, quels sont leurs avantages et leurs inconvénients.
   \item Identifier les propriétés cryptographiques nécessaires aux différentes méthodes de vote pour permettre la sécurité et la confidentialité du vote~:
     \begin{itemize}
       \item seules les personnes autorisées peuvent participer au vote (et cela une seule fois)
@@ -22,7 +22,7 @@ De par l'utilisation quasi exclusive du vote majoritaire dans l'ensemble des vot
       \item le votant n'a pas de moyen de prouver ce qu'il a voté (ce qui évite la corruption)
       \item chacun peut vérifier que son vote a bien été pris en compte.
     \end{itemize}
-  \item Implémenter une démo d'une ou plusieurs méthodes alternatives de votation, dont au moins une qui cherche à minimiser le nombre de mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté, pourra de manière électronique satisfaire les propriétés ci-dessus.
+  \item Implémenter une démo d'une ou plusieurs méthodes alternatives de votation, dont au moins une qui cherche à minimiser le nombre de mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté pourra de manière électronique satisfaire les propriétés ci-dessus.
 \end{enumerate}
 
 \subsection{Livrables}
@@ -30,9 +30,9 @@ De par l'utilisation quasi exclusive du vote majoritaire dans l'ensemble des vot
       \item Un système de vote (la partie cliente et la partie serveur) dont la partie crypto est implémentée en Rust
       \item Un rapport contenant: 
       \begin{itemize}
-        \item L'analyse des différentes méthodes de vote
-        \item Les choix effectués durant le projet
-        \item Les spécifications du logiciel de vote
+        \item l'analyse des différentes méthodes de vote
+        \item les choix effectués durant le projet
+        \item les spécifications du logiciel de vote
       \end{itemize}
     \end{itemize}
 
