--- a/latex/content/crypto-requirements.tex
+++ b/latex/content/crypto-requirements.tex
@@ -5,7 +5,7 @@
 
 Le Bulletin Board est l'emplacement où sont affichés l'ensemble des bulletins et informations publiques des votants. 
 Toute personne, participant ou non à l'élection doit y avoir accès en lecture pour vérifier que la votation se passe correctement~\cite{gharadaghy_verifiability_2010}.
-Dans la plupart des cas il y a besoin que ce qui y est publié ne puisse pas en être retiré.
+Dans la plupart des cas il est nécessaire que ce qui y est publié ne puisse pas en être retiré.
 Cependant, on peut choisir de permettre à un votant de changer son vote (jusqu'au moment du décompte) et dans ce cas, les bulletins précédents 
 peuvent aux choix être supprimés ou conservés.
 
@@ -19,7 +19,7 @@ le bon déroulement du scrutin.
 Il y a deux grandes manières d'effectuer cette authentification : avec des codes d'accès uniques transmis avant chaque votation ou avec des codes d'accès
 conservés de votation en votation pouvant potentiellement également servir à d'autres authentifications.
 
-Lors de l'utilisation de code d'accès unique par votation, les canaux de transmission doivent être le plus sûrs possible.
+Lors de l'utilisation de code d'accès unique par votation, les canaux de transmission doivent être le plus sûr possible.
 Dans la mesure du possible plusieurs canaux différents devrait être utilisés, et qu'au moins deux canaux différents soient nécessaires pour accomplir son authentification.
 Un risque majeur est l'usurpation des codes d'accès non-détectée à temps.
 Il est également important que toutes les électrices et tous les électeurs reçoivent à temps leur code d'accès, car dans le cas contraire, l'exercice de leur droit de vote serait compromis.
@@ -41,28 +41,28 @@ C'est le premier rempart contre la coercition des votants.
 Un vote public permet de menacer une personne pour la forcé à changer son vote, et la menace peut être mise à exécution
 car le changement ou non-changement du vote sera connu de tous.
 
-La confidentialité inconditionnelle est qu'en tout temps, le secret du vote soit préservé.
-Y compris lorsque les serveurs centraux sont compromis et ce quelque soit le moment où leur compromission a lieu.
+La confidentialité inconditionnelle est qu'en tout temps, le secret du vote soit préservé, 
+y compris lorsque les serveurs centraux sont compromis et ce quelque soit le moment où leur compromission a lieu.
 La vérifiabilité universelle est que le résultat du vote peut être vérifié quelque soit le niveau de compromission
 des serveurs.
 
 Un confidentialité inconditionnelle est incompatible avec la vérifiabilité universelle du 
 résultat~\cite{chevallier-mames_incompatible_2010,gharadaghy_verifiability_2010}.
-Un choix doit donc être fait sur qu'est-ce qui est le plus important pour le cas d'utilisation désiré.
+Un choix doit donc être fait sur ce qui est le plus important pour le cas d'utilisation désiré.
 
 \subsection{Vote sans contrainte possible}
 
-Si un votant peut prouver ce qu'il a voté à des tiers, ces dernier peuvent le contraindre à leur révéler son vote.
-Dans ce cas, comme lorsque le vote est publique, le votant peut être contraint dans son vote. 
-Pour évité ce problème, les scrutins traditionnel utilise des isoloirs et des bulletins de vote 
+Si un votant peut prouver à des tiers ce qu'il a voté, ces dernier peuvent le contraindre à leur révéler son vote.
+Dans ce cas, comme lorsque le vote est public, le votant peut être contraint dans son vote. 
+Pour éviter ce problème, les scrutins traditionnels utilisent des isoloirs et des bulletins de vote 
 standardisés.\footnote{Cependant avec les technologies actuelles, cette sécurité est moindre, car un votant pourrait 
 	choisir (ou être contraint) de se filmer lors de son vote et ainsi en créer une preuve.}
 
 Lors d'un vote électronique, le votant peut avoir accès à des informations qui lui permette de déchiffrer son vote.
-Avec l'utilisation de machine à voter, ces informations peuvent être plus ou moins masquée au votant, mais lors
+Avec l'utilisation de machine à voter, ces informations peuvent être plus ou moins masquées au votant, mais lors
 de l'utilisation de l'e-voting à travers Internet, c'est le terminal de l'utilisateur qui est utilisé.
 Grâce à la maîtrise de ce terminal (en étant le propriétaire ou en l'ayant compromis) les informations permettant
-de prouve le vote peuvent être récupérées et transmises.
+de prouver le vote peuvent être récupérées et transmises.
 
 \section{Vérifiabilité}
 
