--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -32,7 +32,7 @@ Dans cette section sont présentés un certain nombre d'arguments pour ou contre
 électronique (utilisé lors de vote d'État). 
 Cette liste n'a pas pour vocation d'être exhaustive, mais de permettre d'avoir une idée
 des implications techniques des principaux arguments \cite{olivier_elections_2022,jaberg_10_nodate}.
-Les réponses qui sont faites à ces arguments sont technique et n'ont pas pour objectif de dire si 
+Les réponses qui sont faites à ces arguments sont techniques et n'ont pas pour objectif de dire si 
 le vote électronique est ou non une bonne chose pour la population.
 
 \newpage
@@ -41,7 +41,7 @@ le vote électronique est ou non une bonne chose pour la population.
 \begin{enumerate}
 	\item facilité de vote en comparaison des contraintes du vote physique
 	\item vote depuis l'étranger possible
-	\item limitation les transmissions de maladie (tel que le COVID)
+	\item limitation de transmission de maladie (telle que le COVID)
 	\item augmentation de la participation
 %TODO reformuler ligne  "il y a également des risques avec le vote physique" ??
 	\item il y a également des risques avec le vote physique
@@ -66,7 +66,7 @@ le vote électronique est ou non une bonne chose pour la population.
 
 \begin{description}
 %TODO reformuler? OLD=Même si la facilité est relative au capacité et compétence de chacun. 
-	\item[pour 1] Même si la facilité est relative au capacité et compétence de chacun. 
+	\item[pour 1] Même si la facilité est relative aux capacités et compétences de chacun. 
 		Un système facile d'utilisation qui authentifie le votant uniquement avec une 
 		paire nom d'utilisateur, mot de passe et le vérifie sur un serveur central sera 
 		peut-être simple à utiliser, mais est-ce que cette simplicité permet de garantir 
@@ -77,8 +77,8 @@ le vote électronique est ou non une bonne chose pour la population.
  	\item[pour 5] Des risques existent aussi avec le vote physique, mais pour de grandes fraudes, il 
  		faut généralement la collaboration d'un nombre de personnes proportionnel à la taille de la fraude.
  		Avec le vote électronique il n'y a plus les contraintes physiques limitant la taille des fraudes.
- 	\item[pour 6] Oui, les résultats peuvent être disponible presque immédiatement.
- 	\item[contre 1] C'est possible, mais il faut également mettre en perspective les bénéfices, mais c'est une question purement politique.
+ 	\item[pour 6] Oui, les résultats peuvent être disponibles presque immédiatement.
+ 	\item[contre 1] C'est possible, mais il faut également mettre en perspective les bénéfices, ce qui est une question purement politique.
  	\item[contre 2] Effectivement la majorité des citoyens n'ont pas les compétences pour comprendre 
  		les protocoles de vote électronique et savoir s'ils sont acceptables.
  	\item[contre 3] Cela dépend de la solution retenue et du protocole.
@@ -103,7 +103,7 @@ permet pour toutes les votations populaires le vote par correspondance.
 
 \subsection{Votation ou élection politique}
 
-Les élections politiques déterminent pour les années à venir par qui le pays sera dirigé. 
+Les élections politiques déterminent par qui le pays sera dirigé pour les années à venir. 
 L'importance de ces élections est grande et donc des petits groupes de personnes peuvent 
 avoir un intérêt prépondérant dans l'un ou l'autre des résultats possibles. 
 Le risque d'une fraude ou tentative de fraude est présent, cependant le vote électronique 
@@ -118,7 +118,7 @@ qu'il n'y a pas eu de fraude, en recomptant les bulletins et vérifiant que chaq
 voté a effectivement voté.
 
 Pour une fraude de grande envergure, avec le vote traditionnel il faut mettre en place un grande infrastructure, des
-personne dans les bureaux de vote, du matériel de vote ou du personnel dérobant les autorisations les lettres pour le vote.
+personne dans les bureaux de vote, du matériel de vote ou du personnel dérobant les autorisations ou les lettres pour le vote.
 Ces infrastructures, d'autant plus grandes que la fraude est de grande envergure, augmentent par leur taille les chances/risques qu'elles 
 soient détectées et potentiellement empêchées. Lors d'un vote électronique, selon la vulnérabilité exploitée, une poignée
 de personne dans leur coin peuvent effectuer une fraude sur l'ensemble du pays.
@@ -163,7 +163,7 @@ concernant les possibilités et les restrictions.
   \chapter{Critère de comparaison}
   
   \begin{important}{Choix des critères}
-  	Le choix des critères de comparaison des différentes méthodes de vote est un choix 
+  	Le choix des critères de comparaison des différentes méthodes de vote est une question 
   	éminemment politique.
 %TODO Vérifier que je n'ai pas changé le sens:
 %  	Cela a la même importance que de répondre à la question quel candidat on souhaite élire en fonction
@@ -182,7 +182,7 @@ concernant les possibilités et les restrictions.
   électeur contre.
   Un système de choix performant devrait prendre en compte les votes qui ne sont pas pour le candidat
   élu, afin de trouver le candidat qui est satisfaisant pour le plus de monde possible.
-  Le \aaref{fig:critere:perdant:example} montre une possibilité de vote où une partie importante de la population 
+  Le tableau \ref{fig:critere:perdant:example}, montre une possibilité de vote où une partie importante de la population
   est très mécontente du résultat.
 
   \begin{nota}{Scrutin d'exemple}
@@ -190,12 +190,11 @@ concernant les possibilités et les restrictions.
 	veut pas dire que le type de scrutin sélectionné est le seul où ce genre de comportement 
 	est présent.
   \end{nota}
-  \todo{Est-ce que seul le scrutin maj à 1 ou 2 tour est présenté ?}
 
 	\begin{table}[h]
 		\begin{center}
 			\caption{Exemple de cas où une grande partie de la population est mécontente}%
-			\label{fig:critere:perdant:example}
+			\label{fig:critere:perdant:example}%
 			\adjustbox{valign=t}{%
 				\begin{subtable}[h]{0.45\textwidth}
 					\centering
@@ -224,7 +223,7 @@ concernant les possibilités et les restrictions.
   le vainqueur.
 %TODO La candidate élue est(?) passe donc(?) de A à B. ==> REFORMULER.  
   Les tableaux \aref{fig:critere:indep:example} présentent un scrutin à 3 candidats, et le même 
-  scrutin, mais avec le candidat C s'étant retiré. La candidate élue est passe donc de A à B.
+  scrutin, mais avec le candidat C s'étant retiré. Le candidat élu passe donc de A à B.
 
   \subsection{Théorème d'impossibilité d'Arrow}
 
@@ -283,7 +282,7 @@ concernant les possibilités et les restrictions.
   une option (A) à une autre option (B), alors cette deuxième option (B) n'est jamais élue/choisie.
   Il y a différentes méthodes de vote qui ne respectent pas la quasi-unanimité du vote.
 
-  \todo{Théorème: Borda ?}
+%  \todo{Théorème: Borda ?}
   
   \section{Manipulabilité et vote utile}
 
@@ -461,120 +460,119 @@ concernant les possibilités et les restrictions.
   \end{table}
   
   \section{Autre critère non pris en compte}
-  \todo{À déplacer ou supprime (les 3 subsections qui suivent)}
-  \subsection{Votes blancs, nuls et abstentions}
-
-  Les votes blancs et nuls devraient toujours être comptés, ne serait-ce que pour des raisons de
-  statistique.
-  Savoir qu'il y a eu 90\% de votes blancs permet de voir qu'il y a un problème, même
-  s'il n'y a aucun moyen de savoir ce qui s'est passé, au simple regard de cette statistique.
-
-  Dans le cas où l'on veut prendre en compte les votes blancs, nuls ou abstentions, il est primordial
-  de faire attention que cela ne privilégie pas une option par rapport à une autre.
-
-  \begin{nota}{Décompte de vote blancs non-neutre}
-    Lors d'un référendum contre une décision du gouvernement, il faut qu'il y ait plus de 50\% 
-    de vote contre pour que la décision soit révoquée.
-
-    Dans le cas où les votes blancs, nuls ou les abstentions sont pris en compte dans 
-    le nombre de personnes ayant validement voter, cela augmente le nombre de votes «~contre~» 
-    dont il y a besoin pour refuser le choix du gouvernement.
-
-    De ce fait, ces «votes» vont donc dans le sens du gouvernement et ne sont donc pas neutres. 
-
-    Si les votes blancs/nuls font juste baisser le quorum, et que si le quorum n'est pas atteint
-%TODO relire encore le paragraphe suivant.
-    une seconde votation a lieu, alors, c'est un usage plus correct de ces voix.
-    %Une manière de faire qui semble être plus correcte concernant ces voix est en présence dans le cas où les votes blancs/nuls font juste baisser le quorum, et que si le quorum n'est pas atteint
-    %une seconde votation a lieu.
-  \end{nota}
-
-
-  \subsection{Corps électoral}
-
-  Pour avoir une bonne représentation de ce que veut la population, avoir un faible taux de votes
-  blancs ou nuls et d'abstentions n'est pas pas suffisant.
-  En effet dans la majorité des pays, une grande partie de la population n'a pas le droit de vote.
-
-  \begin{nota}{Droit de vote en Suisse}
-    En 2015, 37\%\footnote{au niveau fédéral, source: \url{https://www.swissinfo.ch/fre/democratiedirecte/élections-2019\_qui-peut-voter-en-suisse--et-qui-ne-peut-pas-/45264666}}
-    de la population Suisse n'avait simplement pas le droit de vote:
-    \begin{enumerate}
-      \item les étrangers comme dans beaucoup de pays.
-      \item les jeunes jusqu'à 18 ans, cet âge peut varier en fonction du pays
-      \item dans certains pays (mais pas la Suisse), les personnes incarcérées, n'ont pas 
-        le droit de vote.
-      \item et enfin toutes les personnes sous curatelle de portée générale ne peuvent 
-        également pas voter.
-      \item jusqu'à récemment certains pays\footnote{L'Arabie Saoudite a donné le droit de vote aux femmes en 2011, source: \url{https://fr.wikipedia.org/wiki/Droit\_de\_vote\_des\_femmes}} ne donnaient pas le droit de vote aux femmes.
-    \end{enumerate}
-  \end{nota}
-
-  Ces diverses restrictions font qu'une partie de la population vit dans un pays, mais n'a
-  pas la possibilité de participer aux décisions collectives.
-  Lorsqu'on essaye d'interpréter un scrutin réel, il faut donc prendre cela en compte.
-  Un candidat élu à 70\% n'est pas élu à 70\% de la population, ni même à 70\% des personnes
-  ayant le droit de vote, ni encore à 70\% des personnes inscrites sur les listes électorales,
-  ni même enfin à 70\% des votants, mais à 70\% des votants n'ayant pas voté blanc et dont leur 
-  bulletin n'a pas été considéré comme nul.
-  En fonction du pays et de la votation, cela peut avoir une grande importance pour déterminer l'opinion de la population générale.
-
-  Il faut aussi tenir compte du fait que certains pays donnent aussi le droit vote aux personnes ayant la nationalité, mais 
-  résidant à l'étranger.
-  Le résultat ne correspond donc pas à ce que veulent les résidants, mais est influencé aussi par ce
-  que veulent des personnes vivantes à l'étranger.
-
-  \begin{table}[h]
-    \caption{Suisse: Initiative populaire «~99~\%~»}%
-    \label{tab:votation:99pourcent}%
-    % voir : https://www.bfs.admin.ch/bfs/fr/home/statistiques/politique/votations/annee-2021/2021-09-26/initiative-99-pour-cent.html
-    % voir : https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.html
-    \begin{center}
-      \begin{tabular}{lrccc}
-        \hline
-        & & Électeur & Pour [\%] & Contre [\%] \\
-        \hline
-        \hline
-        Résultat officiel        &              & 2~810~307 & 35,12          & 64,88          \\
-        Avec les votes blancs    & $+58~499$    & 2~868~806 & 34,41 -- 36,45 & 63,55 -- 65,59 \\
-        Avec les votes nuls      & $+14~073$    & 2~882~879 & 34,24 -- 36,76 & 63,24 -- 65,76 \\
-        Sans les abstentions     & $+2~636~289$ & 5~519~198 & 17,88 -- 66,96 & 33,04 -- 82,12 \\
-        Populatation tot. (2020) & $+3~151~132$ & 8~670~300 & 11,38 -- 78,97 & 21,03 -- 88,62 \\
-        \hline
-      \end{tabular}
-    \end{center}
-  \end{table}
-
-  La Suisse a voté le 26 septembre 2021 sur l'initiative «~99~\%~».
-  Cette initiative a été largement refusée à plus de 64\%.
-%TODO reformuler OLD="montre les pourcentages de la population possible"...
-  Le \aaref{tab:votation:99pourcent} montre les pourcentages de la population possible dans le 
-  cas où personne n'aurait voté blanc, aucun bulletin nul décompté, sans abstention et 
-  finalement si l'ensemble de la population avait le droit de vote et votait.
-  Par exemple on sait avec certitude que 21,03\% de la population était contre 
-  (l'initiative a été rejetée), mais la proportion de personnes qui sont contre peut varier entre 
-  21,03\% et 88,62\% si l'on ne regarde que le résultat du scrutin.
-  La population prise en compte et celle de 2020 (une année avant le scrutin).
-
-  \subsection{Réflexion et débat}
-
-  Certains scrutins se déroulent en plusieurs tours, il peut être intéressant de demander à la 
-  population de classer tous les candidats/options et de simuler tous les tours.
-  Cette technique permet aux électeurs de ne se déplacer qu'une seule fois aux urnes.
-  Malheureusement, en simulant les tours, on supprime également la possibilité d'avoir un
-  débat et donc que les électeurs puissent changer d'avis.
-  Les compromis entre candidats sont également impossibles.
-
-  Un scrutin à plusieurs tours réels permet d'améliorer le débat politique, même si un scrutin 
-%TODO "certainement plus" ????  
-  à 10 tours lasserait certainement plus que le bénéfice possible.
+%  \todo{À déplacer ou supprime (les 3 subsections qui suivent)}
+%  \subsection{Votes blancs, nuls et abstentions}
+%
+%  Les votes blancs et nuls devraient toujours être comptés, ne serait-ce que pour des raisons de
+%  statistique.
+%  Savoir qu'il y a eu 90\% de votes blancs permet de voir qu'il y a un problème, même
+%  s'il n'y a aucun moyen de savoir ce qui s'est passé, au simple regard de cette statistique.
+%
+%  Dans le cas où l'on veut prendre en compte les votes blancs, nuls ou abstentions, il est primordial
+%  de faire attention que cela ne privilégie pas une option par rapport à une autre.
+%
+%  \begin{nota}{Décompte de vote blancs non-neutre}
+%    Lors d'un référendum contre une décision du gouvernement, il faut qu'il y ait plus de 50\% 
+%    de vote contre pour que la décision soit révoquée.
+%
+%    Dans le cas où les votes blancs, nuls ou les abstentions sont pris en compte dans 
+%    le nombre de personnes ayant validement voter, cela augmente le nombre de votes «~contre~» 
+%    dont il y a besoin pour refuser le choix du gouvernement.
+%
+%    De ce fait, ces «votes» vont donc dans le sens du gouvernement et ne sont donc pas neutres. 
+%
+%    Si les votes blancs/nuls font juste baisser le quorum, et que si le quorum n'est pas atteint
+%%TODO relire encore le paragraphe suivant.
+%    une seconde votation a lieu, alors, c'est un usage plus correct de ces voix.
+%    %Une manière de faire qui semble être plus correcte concernant ces voix est en présence dans le cas où les votes blancs/nuls font juste baisser le quorum, et que si le quorum n'est pas atteint
+%    %une seconde votation a lieu.
+%  \end{nota}
+%
+%
+%  \subsection{Corps électoral}
+%
+%  Pour avoir une bonne représentation de ce que veut la population, avoir un faible taux de votes
+%  blancs ou nuls et d'abstentions n'est pas pas suffisant.
+%  En effet dans la majorité des pays, une grande partie de la population n'a pas le droit de vote.
+%
+%  \begin{nota}{Droit de vote en Suisse}
+%    En 2015, 37\%\footnote{au niveau fédéral, source: \url{https://www.swissinfo.ch/fre/democratiedirecte/élections-2019\_qui-peut-voter-en-suisse--et-qui-ne-peut-pas-/45264666}}
+%    de la population Suisse n'avait simplement pas le droit de vote:
+%    \begin{enumerate}
+%      \item les étrangers comme dans beaucoup de pays.
+%      \item les jeunes jusqu'à 18 ans, cet âge peut varier en fonction du pays
+%      \item dans certains pays (mais pas la Suisse), les personnes incarcérées, n'ont pas 
+%        le droit de vote.
+%      \item et enfin toutes les personnes sous curatelle de portée générale ne peuvent 
+%        également pas voter.
+%      \item jusqu'à récemment certains pays\footnote{L'Arabie Saoudite a donné le droit de vote aux femmes en 2011, source: \url{https://fr.wikipedia.org/wiki/Droit\_de\_vote\_des\_femmes}} ne donnaient pas le droit de vote aux femmes.
+%    \end{enumerate}
+%  \end{nota}
+%
+%  Ces diverses restrictions font qu'une partie de la population vit dans un pays, mais n'a
+%  pas la possibilité de participer aux décisions collectives.
+%  Lorsqu'on essaye d'interpréter un scrutin réel, il faut donc prendre cela en compte.
+%  Un candidat élu à 70\% n'est pas élu à 70\% de la population, ni même à 70\% des personnes
+%  ayant le droit de vote, ni encore à 70\% des personnes inscrites sur les listes électorales,
+%  ni même enfin à 70\% des votants, mais à 70\% des votants n'ayant pas voté blanc et dont leur 
+%  bulletin n'a pas été considéré comme nul.
+%  En fonction du pays et de la votation, cela peut avoir une grande importance pour déterminer l'opinion de la population générale.
+%
+%  Il faut aussi tenir compte du fait que certains pays donnent aussi le droit vote aux personnes ayant la nationalité, mais 
+%  résidant à l'étranger.
+%  Le résultat ne correspond donc pas à ce que veulent les résidants, mais est influencé aussi par ce
+%  que veulent des personnes vivantes à l'étranger.
+%
+%  \begin{table}[h]
+%    \caption{Suisse: Initiative populaire «~99~\%~»}%
+%    \label{tab:votation:99pourcent}%
+%    % voir : https://www.bfs.admin.ch/bfs/fr/home/statistiques/politique/votations/annee-2021/2021-09-26/initiative-99-pour-cent.html
+%    % voir : https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.html
+%    \begin{center}
+%      \begin{tabular}{lrccc}
+%        \hline
+%        & & Électeur & Pour [\%] & Contre [\%] \\
+%        \hline
+%        \hline
+%        Résultat officiel        &              & 2~810~307 & 35,12          & 64,88          \\
+%        Avec les votes blancs    & $+58~499$    & 2~868~806 & 34,41 -- 36,45 & 63,55 -- 65,59 \\
+%        Avec les votes nuls      & $+14~073$    & 2~882~879 & 34,24 -- 36,76 & 63,24 -- 65,76 \\
+%        Sans les abstentions     & $+2~636~289$ & 5~519~198 & 17,88 -- 66,96 & 33,04 -- 82,12 \\
+%        Populatation tot. (2020) & $+3~151~132$ & 8~670~300 & 11,38 -- 78,97 & 21,03 -- 88,62 \\
+%        \hline
+%      \end{tabular}
+%    \end{center}
+%  \end{table}
+%
+%  La Suisse a voté le 26 septembre 2021 sur l'initiative «~99~\%~».
+%  Cette initiative a été largement refusée à plus de 64\%.
+%%TODO reformuler OLD="montre les pourcentages de la population possible"...
+%  Le \aaref{tab:votation:99pourcent} montre les pourcentages de la population possible dans le 
+%  cas où personne n'aurait voté blanc, aucun bulletin nul décompté, sans abstention et 
+%  finalement si l'ensemble de la population avait le droit de vote et votait.
+%  Par exemple on sait avec certitude que 21,03\% de la population était contre 
+%  (l'initiative a été rejetée), mais la proportion de personnes qui sont contre peut varier entre 
+%  21,03\% et 88,62\% si l'on ne regarde que le résultat du scrutin.
+%  La population prise en compte et celle de 2020 (une année avant le scrutin).
+%
+%  \subsection{Réflexion et débat}
+%
+%  Certains scrutins se déroulent en plusieurs tours, il peut être intéressant de demander à la 
+%  population de classer tous les candidats/options et de simuler tous les tours.
+%  Cette technique permet aux électeurs de ne se déplacer qu'une seule fois aux urnes.
+%  Malheureusement, en simulant les tours, on supprime également la possibilité d'avoir un
+%  débat et donc que les électeurs puissent changer d'avis.
+%  Les compromis entre candidats sont également impossibles.
+%
+%  Un scrutin à plusieurs tours réels permet d'améliorer le débat politique, même si un scrutin 
+%%TODO "certainement plus" ????  
+%  à 10 tours lasserait certainement plus que le bénéfice possible.
 
   \section{Évaluation}
   
   Dans le \aaref{tab:criteres:scrutin} est présentée pour chaque critère d'évaluation, les conditions d'obtention pour chaque évaluation.
   Ces conditions d'obtention sont des choix personnels dans l'objectif que le scrutin choisi permette de se rapprocher aux mieux de l'unanimité.
 
-  \todo{borda moderne faux pas indep au petit candidat}
   \begin{table}
   \caption{Critères d'évaluations des scrutins}%
   \label{tab:criteres:scrutin}%
@@ -733,7 +731,7 @@ concernant les possibilités et les restrictions.
   
   \begin{nota}{Qui éliminer~?}
     Habituellement, les candidats/options avec le moins de voix sont éliminés, mais
-    est-ce vraiment ces électeurs qui sont le plus susceptibles de changer d'avis~?
+    les électeurs de ces candidats sont-ils vraiment ceux qui sont le plus susceptibles de changer d'avis~?
     Est-ce qu'un électeur d'un des 2 candidats proche mutuellement n'aurait pas plus
     de facilité à changer son vote~?
   \end{nota}
@@ -805,26 +803,25 @@ concernant les possibilités et les restrictions.
   \tabcritere%
     {\cellcolor{red}très mauvais}{Une grande part de la population (>50\%) peut être contre l'élu·e.}%
     {\cellcolor{red}mauvais}{Les petits candidats «~volent~» des voix aux autres candidats proches d'eux politiquement.}%
-    {\cellcolor{red}mauvais}{Si les voix sont suffisamment divisé dans un des camps, aucun de leurs candidats pourrait atteindre le second tour, alors que ce camp représentent peut-être plus de 75\% de la population}%
-    {\cellcolor{red}mauvais}{La meilleure technique de vote consiste à se basé sur des sondage pour avoir une estimation des résultats et voter pour le candidat qui a le plus de chance d'être élu et pour lequel on n'est pas entièrement contre. Les petits candidats qui aurait une chance de l'emporté, mais non présent dans les sondages ou mal classée ne recevront que peu de voix, alors qu'il aurait pu faire de très bon score.}
+    {\cellcolor{red}mauvais}{Si les voix sont suffisamment divisés dans un des camps, aucun de leurs candidats pourrait atteindre le second tour, alors que ce camp représente peut-être plus de 75\% de la population.}%
+    {\cellcolor{red}mauvais}{La meilleure technique de vote consiste à se baser sur des sondages pour avoir une estimation des résultats et voter pour le candidat qui a le plus de chance d'être élu et pour lequel on n'est pas entièrement contre. Les petits candidats qui auraient une chance de l'emporter, mais non présents dans les sondages ou mal classés ne recevront que peu de voix, alors qu'ils auraient pu faire de très bons scores.}
 
   \subsubsection{À 1 tour}
   \tabcritere%
     {\cellcolor{red}très mauvais}{Une grande part de la population (>50\%) peut être contre l'élu·e.}%
     {\cellcolor{red}mauvais}{Les petits candidats «~volent~» des voix aux autres candidats proches d'eux politiquement.}%
     {\cellcolor{red}mauvais}{Si les voix sont suffisamment divisées dans un des camps, et que dans l'autre camp il y a un candidat unique, le résultat sera biaisé en faveur du candidat unique, alors que potentiellement plus de 75\% de le population serait pour un autre candidat, n'importe lequel.}%
-    {\cellcolor{red}mauvais}{La meilleure technique de vote consiste à se basé sur des sondage pour avoir une estimation des résultats et voter pour le candidat qui a le plus de chance d'être élu et pour lequel on n'est pas entièrement contre. Les petits candidats qui aurait une chance de l'emporté, mais non présent dans les sondages ou mal classée ne recevront que peu de voix, alors qu'il aurait pu faire de très bon score.}
-    
+    {\cellcolor{red}mauvais}{La meilleure technique de vote consiste à se baser sur des sondages pour avoir une estimation des résultats et voter pour le candidat qui a le plus de chance d'être élu et pour lequel on n'est pas entièrement contre. Les petits candidats qui auraient une chance de l'emporter, mais non présents dans les sondages ou mal classés ne recevront que peu de voix, alors qu'ils auraient pu faire de très bons scores.}
 
   \section{Méthode Borda}\label{sec:scrutin:borda}
   
-  Chaques votants classent tous ou parties des options dans l'ordre de leur préférence.
+  Chaque votant classe toutes ou une partie des options dans l'ordre de leurs préférences.
   Les candidats reçoivent des points en fonction de leur position dans l'ordre de chaque bulletin.
   Le/la vainqueur·e est celui qui a obtenu le plus de points.
 
   \subsection{Distribution des points}
 
-  Dans la description de cette méthode de vote faite par J.-C. Borda donnait 1 point au
+  Dans la description de cette méthode de vote faite par J.-C. Borda, il donnait 1 point au
   candidat classé en dernier, puis un point supplémentaire pour l'avant-dernier et ainsi
   de suite jusqu'au premier candidat.
   Dans la pratique actuelle~\cite{emerson_original_2013} les points sont distribués du 
@@ -832,7 +829,7 @@ concernant les possibilités et les restrictions.
   Si tous les électeurs classent l'ensemble des candidats, alors ces deux méthodes donnent le même 
   résultat. Cependant lorsqu'on autorise le classement partiel, il y a des différences.
 
-  Pour éviter toute ambigüité du fait de de la présence de deux méthodes Borda, 
+  Pour éviter toute ambiguïté du fait de de la présence de deux méthodes Borda, 
   je désigne par \textbf{classique} la méthode initialement décrite par Borda avec distribution des points à partir du candidat classé en dernier (1 point)
   et par  \textbf{moderne} la méthode distribuant
   les points à partir du candidat classé en premier ($n$ points).
@@ -866,7 +863,7 @@ concernant les possibilités et les restrictions.
   \end{table}
 
   Comme le montrent les tableaux \aref{fig:diff:borda:caslim2}, la méthode classique pousse 
-  les votants à classer un maximum de candidat et donc aide à la recherche d'un 
+  les votants à classer un maximum de candidats et donc aide à la recherche d'un 
   compromis convenant à tout le monde.
   Alors que la méthode moderne pousse plus à ne classer que le candidat favori, si on grande
   partie des votants choisissent de faire cela, on se retrouve dans une situation proche 
@@ -970,7 +967,7 @@ concernant les possibilités et les restrictions.
   du vote.
 
   Nous pouvons constater que lorsqu'on utilise le décompte de points moderne, une petite 
-  proportion des électeurs (16\%) arrivent à faire basculer le résultat à leur avantage.
+  proportion des électeurs (16\%) arrive à faire basculer le résultat à leur avantage.
 
 
   \subsection{Évaluation}
@@ -996,8 +993,8 @@ concernant les possibilités et les restrictions.
 
   \subsection{Paradoxe de Condorcet}
 
-  Le paradoxe de Condorcet, lors d'un vote par classement de 3 options (A, B, C).
-  C'est qu'il peut y avoir une majorité de votants préférant C à A, une autre majorité 
+  Le paradoxe de Condorcet, lors d'un vote par classement de 3 options (A, B, C),
+  c'est qu'il peut y avoir une majorité de votants préférant C à A, une autre majorité 
   préférant B à C, et qu'une dernière majorité préfère A à B.
   Dans un tel cas, quelleque soit l'option retenue, il y a toujours plus de 50\% des votants
   qui seraient pour changer d'option.
@@ -1005,7 +1002,6 @@ concernant les possibilités et les restrictions.
   Dans le cas où il y a un paradoxe de Condorcet, d'autres méthodes doivent être utilisées pour désigner
   le gagnant.
   Cela peut être une autre méthode de vote ou un algorithme spécifique.
-  \todo{Retrouver l'exemple réel du paradoxe lors des élections présidentiel française}
   \subsection{Élection étrange}
   \begin{table}[h]
     \begin{center}
@@ -1042,9 +1038,6 @@ concernant les possibilités et les restrictions.
     {\cellcolor{green}bien}{Lorsqu'il y a un unique vainqueur, la méthode est résistant aux petits candidats.}%
     {\cellcolor{green}bien}{Lorsqu'il y a un unique vainqueur, ce critère est forcement respecté de part la définition du scrutin.}%
     {\cellcolor{green}bien}{Le système de vote pousse les électeurs à donner leur vraie préférence}
-
-  \todo{retrouver papier à propos de la résistance au petit candidat}
-  \todo{Évaluation méthode de Condorcet randomisé}
 
   \section{Vote par approbation}
 
@@ -1126,7 +1119,6 @@ concernant les possibilités et les restrictions.
   % TODO
   \end{algorithmic}
   \end{algorithm}
-  \todo{Écrire la fin de l'algorithme}
 
   \begin{table}[H]
     \begin{center}
@@ -1176,12 +1168,12 @@ concernant les possibilités et les restrictions.
     {\cellcolor{green}bien}{Chaque candidat a une évaluation propre ne dépendant pas des autres candidats.}%
     {\cellcolor{red}mauvais}{Seul l'avis médian est pris en compte, on peut construire des simulations dans laquelle une majorité de personnes préférerait un même autre candidat au candidat élu.}%
 %TODO ci-dessous REFORMULER éventuellement "mais n'est pas évident"     
-    {\cellcolor{green!25!yellow}correct}{Le meilleure technique consiste à donner ses vraies préférences, cependant dans certain cas spécifiques, pour certains votants uniquement, une meilleure stratégie peut exister mais n’est pas évidente}
+    {\cellcolor{green!25!yellow}correct}{Le meilleure technique consiste à donner ses vraies préférences, cependant dans certain cas spécifiques, pour certains votants uniquement, une meilleure stratégie peut exister.}
 
   \section{Méthode de Coombs et vote alternatif}
 
-  Chaque votant classe tous ou parties des options dans l'ordre de leurs préférences.
-  Puis on simule un scrutin à la majorité absolue sans limites de nombre de tours, en retirant le pire candidat
+  Chaque votant classe toutes ou partie des options dans l'ordre de leurs préférences.
+  Puis on simule un scrutin à la majorité absolue sans limite de nombre de tours, en retirant le pire candidat
   après chaque tour.
 
   \subsection{Vote alternatif}
@@ -1194,7 +1186,6 @@ concernant les possibilités et les restrictions.
   \subsection{Méthode de Coombs}
   La méthode de Coombs retire à chaque tour le candidat ayant été classé le plus souvent en dernière position.
   Cette méthode à l'avantage de prendre en compte les votes négatifs (les candidats classés en dernier).
-%TODO terminer la phrase précédente  
 
   \subsection{Exemple}
 
@@ -1234,7 +1225,7 @@ concernant les possibilités et les restrictions.
   \subsection{Évaluation}
   \subsubsection{Méthode de Coombs}
   \tabcritere%
-    {\cellcolor{orange}moyen}{En retirant le candidat le plus souvent en dernière position, on prend en compte l'avis des perdants. Cela ne suffit pas pour s'assurer qu'il n'y a pas de meilleurs candidats dans le cas où un candidat est élu à 51\%.}%
+    {\cellcolor{orange}moyen}{En retirant le candidat le plus souvent en dernière position, on prend en compte l'avis des perdants. Cela ne suffit pas pour s'assurer qu'il n'y a pas de meilleur candidat dans le cas où un candidat est élu à 51\%.}%
     {\cellcolor{red}mauvais}{Les petits candidats «~volent~» des voix aux autres.}%
     {\cellcolor{red}mauvais}{Si les voix sont suffisamment divisées dans un des camps.}%
     {\cellcolor{orange}moyen}{Pose globalement les mêmes problèmes que le scrutin majoritaire (\aref{diff:scrutin-majoritaire}), mais est plus complexe à prédire, car il faut prédire tous les tours avant le vote. La meilleure technique de vote se base sur la prise en compte des sondages afin de choisir le vote le plus pertinent.}
