--- a/latex/heig.sty
+++ b/latex/heig.sty
@@ -1,10 +1,10 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{heig}[2021/11/29 Meta-inforation for HEIG TB documents]
 
-\newcommand{\todo}[2][0]{
-  \begin{nota}{TODO} #2 \index{TODO}\end{nota}
-  \lipsum[#1]
-}
+%\newcommand{\todo}[2][0]{
+ % \begin{nota}{TODO} #2 \index{TODO}\end{nota}
+ % \lipsum[#1]
+%}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % définition des setters
