--- a/latex/publishable-summary.tex
+++ b/latex/publishable-summary.tex
@@ -5,7 +5,16 @@
 \begin{document}
 
     \begin{abstract}
-        \todo[0]{Le contenu du résumé publiable}
+    	
+		Les scrutins sont omniprésents dans notre quotidien. Les élections et votations politiques sont celles auxquelles on pense le plus rapidement. 
+		Les scrutins sont pourtant utilisés dans bien d'autres situations comme des décisions au sein d'associations ou d'entreprises.
+		Dans de nombreux cas le scrutin utilisé est le scrutin majoritaire. 
+		Ce scrutin a pourtant bien des défauts. Durant ce travail de Bachelor il a été comparé à d'autres scrutins (méthode de Condorcet, vote par approbation, méthode Borda, jugement majoritaire, ...) suite à cette comparaison la méthode Borda a été choisie pour être implémentée dans un système de e-voting.
+		
+		Ce proof-of-concept d'e-voting Borda, met en place la méthode Borda en essayant de garantir au maximum la confidentialité du vote. 
+		S'il n'y a pas de compromission, seul le votant a la connaissance de son vote: ni le serveur central, ni ceux calculant les résultats n'ont accès 
+		au contenu des bulletins de vote. L'implémentation se base sur la courbe écliptique Ristretto255.
+		
     \end{abstract}
 
 
